[project]
name = "crewai-masumi-quickstart-template"
version = "0.1.0"
description = "Template project for starting your joirney with AI Agnets on Masumi."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "crewai",
    "masumi",
    "pydantic",
    "python-multipart",
    "httpx",
]